[tool.poetry]
name = "math-series"
version = "0.1.0"
description = ""
authors = ["Kirk Garrison <Kirkgarrison24601@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
